[project]
name = "zondocs_theme"
description = "Sphinx theme for ZEIT ONLINE docs"
version='1.0.8.dev0'
readme = "README.rst"
license = {text = "MIT"}
maintainers = [{name = "Nico Bruenjes", email = "nico.bruenjes@zeit.de"}]
authors = [{name = "Nico Bruenjes", email = "nico.bruenjes@zeit.de"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme"
]
requires-python = ">=3.7"

[project.urls]
Changes = "https://github.com/ZeitOnline/zondocs_theme/blob/main/CHANGES.txt"
"Source Code" = "https://github.com/zeitonline/zondocs_theme/"
"Issue Tracker" = "https://github.com/zeitonline/zondocs_theme/issues/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points]
"sphinx.html_themes" = { zondocs_theme = "zondocs_theme" }
